--- a/.forestry/front_matter/templates/page.yml
+++ b/.forestry/front_matter/templates/page.yml
@@ -2,26 +2,27 @@
 label: Page
 hide_body: false
 fields:
-- name: title
-  type: text
-  config:
-    required: true
-  label: Title
-- name: description
-  type: textarea
-  default: ''
-  config:
-    required: false
-    wysiwyg: false
-    schema:
-      format: markdown
-  label: Description
-- name: page_sections
-  type: blocks
-  label: Page Sections
-  template_types:
-  - highlights
-  - textarea
-  config:
-    min: 
-    max: 
+  - name: title
+    type: text
+    config:
+      required: true
+    label: Title
+  - name: description
+    type: textarea
+    default: ""
+    config:
+      required: false
+      wysiwyg: false
+      schema:
+        format: markdown
+    label: Description
+  - name: page_sections
+    type: blocks
+    label: Page Sections
+    template_types:
+      - highlights
+      - textarea
+      - img-left
+    config:
+      min:
+      max:
